# grok-alpaca

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/app/: __init__.py  main.py
backend/app/api/v1/: analysis.py  chat.py  market.py  reports.py  stream_ws.py  (+1 more)
backend/app/core/: config.py  localhost_guard.py  logging.py
backend/app/services/: watchlist.py
backend/tests/: conftest.py
backend/tests/integration/: test_app_boots.py
backend/tests/unit/: test_backtest.py  test_config.py  test_crypto.py  test_indicators.py  test_localhost_guard.py  test_options.py  test_orchestrator.py  test_reports.py  test_stats.py  test_tools_registry.py  test_watchlist.py
docs/: ARCHITECTURE.md  PROMPTS.md  SKILLS.md
frontend/: .eslintrc.cjs  .gitignore  .npmrc  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: client.ts  hooks.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/stores/: chat.ts  dashboard.ts
frontend/src/styles/: globals.css
frontend/src/test/: setup.ts
frontend/src/types/: react-plotly.d.ts
frontend/tests/e2e/: chat.spec.ts  fixtures.ts
prompts/: 00-bootstrap.md  01-config-and-secrets.md  02-alpaca-historical.md  03-alpaca-streaming.md  04-grok-client.md  05-tools-and-orchestrator.md  06-indicators-and-stats.md  07-fastapi-routes.md  08-frontend-scaffold.md  09-chat-panel.md  10-charts.md  11-live-stream.md  12-watchlist-snapshot.md  13-reports-artifacts.md  14-skills-bridge.md  15-tests-ci.md  16-docs-and-readme.md  17-publish-to-github.md  README.md
scripts/: run-dev.sh  seed-watchlist.py
(+34 files in other folders)
