[project]
name = "grok-alpaca"
version = "0.1.0"
description = "Localhost financial-analysis framework: xAI Grok + Alpaca real-time market data, with a React web UI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "grok-alpaca" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "xai-sdk>=0.1.0",
    "alpaca-py>=0.34",
    "pandas>=2.2",
    "pandas-ta>=0.3.14b0",
    "numpy>=1.26",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "rich>=13.9",
    "httpx>=0.27",
    "websockets>=13",
    "markdown-it-py[plugins]>=3.0",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "weasyprint>=63",
    "sse-starlette>=2.1",
    "orjson>=3.10",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.7",
    "black>=24.10",
    "mypy>=1.13",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4", "ASYNC"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires real API keys; skipped by default",
]
